--- a/css/main.css
+++ b/css/main.css
@@ -855,20 +855,34 @@ body._lock {
 .advantages {
   background: #F2F2F2;
 }
-
-.advantages__section-header {
+.advantages .advantages__section-header {
   margin: 0 auto;
   padding: 71px 0 32px 0;
 }
-
-.advantages__items-block {
+@media (max-width: 374px) {
+  .advantages .advantages__section-header {
+    padding-top: 32px;
+  }
+}
+.advantages .advantages__items-block {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   padding-bottom: 82px;
 }
-
-.items-block__item {
+@media (max-width: 1023px) {
+  .advantages .advantages__items-block {
+    justify-content: space-around;
+  }
+}
+@media (max-width: 374px) {
+  .advantages .advantages__items-block {
+    padding-bottom: 42px;
+    position: relative;
+    z-index: 10;
+  }
+}
+.advantages .advantages__items-block .items-block__item {
   padding: 0 24px 32px;
   display: flex;
   flex-direction: column;
@@ -878,44 +892,39 @@ body._lock {
   width: 370px;
   height: 224px;
 }
-.items-block__item:hover {
+.advantages .advantages__items-block .items-block__item:hover {
   background: #FFFFFF;
   box-shadow: 16px 16px 48px rgba(0, 0, 0, 0.0994678);
   border-radius: 3px;
 }
-
-.items-block__item-3,
-.items-block__item-6 {
+.advantages .advantages__items-block .items-block__item .items-block__item-3, .advantages .advantages__items-block .items-block__item .items-block__item-6 {
   padding-top: 54px;
 }
-
-.items-block__title {
+.advantages .advantages__items-block .items-block__item .items-block__title {
   margin: 13px 0 9px 0;
 }
-
-.items-block__text {
+.advantages .advantages__items-block .items-block__item .items-block__text {
   font-weight: 400;
   color: #333333;
   mix-blend-mode: normal;
   opacity: 0.5;
 }
-
-.items-block__image {
+.advantages .advantages__items-block .items-block__item .items-block__image {
   padding-top: 10px;
   min-width: 48px;
   position: relative;
 }
-.items-block__image.items-block__item-3, .items-block__image.items-block__item-6 {
+.advantages .advantages__items-block .items-block__item .items-block__image.items-block__item-3, .advantages .advantages__items-block .items-block__item .items-block__image.items-block__item-6 {
   padding-top: 54px;
 }
-.items-block__image.items-block__image-1, .items-block__image.items-block__image-2, .items-block__image.items-block__image-5 {
+.advantages .advantages__items-block .items-block__item .items-block__image.items-block__image-1, .advantages .advantages__items-block .items-block__item .items-block__image.items-block__image-2, .advantages .advantages__items-block .items-block__item .items-block__image.items-block__image-5 {
   display: flex;
   justify-content: right;
 }
-.items-block__image.items-block__image-3 {
+.advantages .advantages__items-block .items-block__item .items-block__image.items-block__image-3 {
   padding-right: 3px;
 }
-.items-block__image.items-block__image-1::after {
+.advantages .advantages__items-block .items-block__item .items-block__image.items-block__image-1::after {
   content: url(../img/advantages/12.svg);
   position: absolute;
   left: 0;
@@ -923,7 +932,7 @@ body._lock {
   top: 12px;
   bottom: 0;
 }
-.items-block__image.items-block__image-2::after {
+.advantages .advantages__items-block .items-block__item .items-block__image.items-block__image-2::after {
   content: url(../img/advantages/21.svg);
   position: absolute;
   left: 0px;
@@ -931,7 +940,7 @@ body._lock {
   top: 2px;
   bottom: 0px;
 }
-.items-block__image.items-block__image-3::after {
+.advantages .advantages__items-block .items-block__item .items-block__image.items-block__image-3::after {
   content: url(../img/advantages/31.svg);
   position: absolute;
   left: 0px;
@@ -939,10 +948,10 @@ body._lock {
   top: -12px;
   bottom: 0px;
 }
-.items-block__image.items-block__image-4 {
+.advantages .advantages__items-block .items-block__item .items-block__image.items-block__image-4 {
   padding-right: 1px;
 }
-.items-block__image.items-block__image-4::after {
+.advantages .advantages__items-block .items-block__item .items-block__image.items-block__image-4::after {
   content: url(../img/advantages/41.svg);
   position: absolute;
   left: 22px;
@@ -950,10 +959,10 @@ body._lock {
   top: 22px;
   bottom: 0px;
 }
-.items-block__image.items-block__image-5 {
+.advantages .advantages__items-block .items-block__item .items-block__image.items-block__image-5 {
   padding-right: 4px;
 }
-.items-block__image.items-block__image-5::after {
+.advantages .advantages__items-block .items-block__item .items-block__image.items-block__image-5::after {
   content: url(../img/advantages/51.svg);
   position: absolute;
   left: 0px;
@@ -961,11 +970,11 @@ body._lock {
   top: 16px;
   bottom: 0px;
 }
-.items-block__image.items-block__image-6 {
+.advantages .advantages__items-block .items-block__item .items-block__image.items-block__image-6 {
   padding-right: 6px;
   padding-bottom: 2px;
 }
-.items-block__image.items-block__image-6::after {
+.advantages .advantages__items-block .items-block__item .items-block__image.items-block__image-6::after {
   content: url(../img/advantages/61.svg);
   position: absolute;
   left: 14px;
@@ -974,11 +983,6 @@ body._lock {
   bottom: 0px;
 }
 
-@media (max-width: 1024px) {
-  .advantages__items-block {
-    justify-content: space-around;
-  }
-}
 @media (max-width: 375px) {
   .advantages__section-header {
     padding-top: 32px;
