--- a/scss/main.scss
+++ b/scss/main.scss
@@ -9,6 +9,8 @@
 @import "./blocks/block-header";
 @import "./blocks/section-header";
 @import "./blocks/main-block";
+@import "./blocks/accordion";
+@import "./blocks/image-block";
 @import "./blocks/header";
 @import "./blocks/explore";
 @import "./blocks/notes";
