--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -1,7 +1,9 @@
 body, html {
     font-family: 'Source Sans Pro';
+    font-weight: 600;
     font-size: 16px;
     line-height: 1.5;
+    color: $accent-font-color;
 }  
 h1, h2, h3, h4, h5, h6 {
     font-weight: 700;
@@ -14,9 +16,7 @@ h1 {
 h2 {
     font-size: 56px;
     line-height: 64px;
-}
-@media (max-width: 1024px) {
-    h2 {
+    @include laptop {
         font-size: 40px;
         line-height: 48px;
     }
