--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -1,15 +1,18 @@
 $accent-font-color: #333333;
 $second-font-color: #FFFFFF; 
 
+$laptop-breakpoint: 1023px;
+$tablet-breakpoint: 767px;
+$mobile-breakpoint: 374px;
 
-@mixin breakpoint($point) {
-    @if $point == lg {
-        @media(max-width: 1023px) {@content};
-    }
-    @else if $point == md {
-        @media(max-width: 767px) {@content};
-    }
-    @else if $point == sm {
-        @media(max-width: 374px) {@content};
-    }
+@mixin laptop {
+    @media(max-width: $laptop-breakpoint) {@content};
+}
+
+@mixin tablet {
+    @media(max-width: $tablet-breakpoint) {@content};
+}
+
+@mixin mobile {
+    @media(max-width: $mobile-breakpoint) {@content};
 }
