--- a/scss/blocks/_button.scss
+++ b/scss/blocks/_button.scss
@@ -7,19 +7,20 @@
     border-radius: 24px;
     font-weight: 700;
     color: #FFFFFF;
-    &.button_color_yellow {
+    &_color_yellow {
         background: #FFC300;
     }
-    &.button_color_purple {
+    &_color_purple {
         background: #C86DD7;
     }
-    &.button_color_transparent {
+    &_color_transparent {
         border: 1px solid rgba(255, 255, 255, 0.295063);
     }
-}
-.button:hover {
-    cursor: pointer;
-    opacity: 0.9;
-    color: #DADADA;
-    transition: all 0.5s ease;
+    
+    &:hover {
+        cursor: pointer;
+        opacity: 0.9;
+        color: #DADADA;
+        transition: all 0.5s ease;
+    }
 }
