--- a/scss/blocks/_section-header.scss
+++ b/scss/blocks/_section-header.scss
@@ -4,9 +4,7 @@
     text-align: center;
     justify-content: center;
     max-width: 570px;
-    .section-header__text {
+    &__text {
         padding-top: 23px;
-        font-weight: 600;
-        color: #333333;
     }
 }
