--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,6 +11,10 @@
 @import "./blocks/main-block";
 @import "./blocks/accordion";
 @import "./blocks/image-block";
+@import "./blocks/links-block";
+@import "./blocks/items-block";
+@import "./blocks/item-review";
+@import "./blocks/menu";
 @import "./blocks/header";
 @import "./blocks/explore";
 @import "./blocks/notes";
