--- a/scss/blocks/_accordion.scss
+++ b/scss/blocks/_accordion.scss
@@ -1,34 +1,36 @@
 .accordion {
-    &__item.active:not(:last-child){ 
+    &__item {
+        &._active:not(:last-child) { 
             margin-bottom: 40px;
-            
+        }
     }
-    button {
+    &__button {
         padding-bottom: 26px;
 
         &:after {
             content: url(../img/notes/arr-down.svg);
             padding-left: 8px;
         }
-        &.active,
+        &._active,
         &:hover {
             text-decoration: underline;
         }
-        &.active {
+        &._active {
             padding-bottom: 10px;
             
             }
-        &.active::after {
+        &._active::after {
             content: url(../img/notes/arr-up.svg);
         }
     }
 
-    &__text_hidden {
+    &__text {
         display: none;
         font-weight: 400;
         mix-blend-mode: normal;
         opacity: 0.5;
         overflow: auto;
+
         @include tablet {
             max-width: 100%;
         }
