--- a/scss/blocks/_block-header.scss
+++ b/scss/blocks/_block-header.scss
@@ -1,5 +1,5 @@
 .block-header {
-    .block-header__subtitle {
+    &__subtitle {
         font-family: 'Poppins';
         font-weight: 700;
         text-transform: uppercase;
