--- a/scss/blocks/_explore.scss
+++ b/scss/blocks/_explore.scss
@@ -9,6 +9,7 @@
         position: relative;
         justify-content: space-between;
         max-height: 768px;
+
         @include tablet {
             padding-top: 64px;
             display: flex; 
@@ -22,6 +23,7 @@
         padding: 85px 0 192px 0;
         max-width: 360px;
         color: $second-font-color;
+
         @include tablet {
             display: flex;
             flex-direction: column;
@@ -57,6 +59,7 @@
         right: 15px;
         top: 688px;
         z-index: 5;
+
         @include tablet {
             left: 50%;
             top: 750px;
@@ -77,17 +80,17 @@
             width: 100%;
             justify-content: start;
         }
-
-        & img {
-            position: relative;
-            z-index: 2;
-            @include tablet {
-                width: 100%;
-                min-width: 500px;
-            }
-            @include mobile {
-                min-width: 135%;
-            }
+    }
+    &__pic {
+        position: relative;
+        z-index: 2;
+        
+        @include tablet {
+            width: 100%;
+            min-width: 500px;
+        }
+        @include mobile {
+            min-width: 135%;
         }
     }
 
@@ -102,6 +105,7 @@
             left: -49px;
             width: 100px;
             height: 100px;
+            
             @include tablet {
                 bottom: 30px;
                 left: -48px;
