--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -16,10 +16,12 @@
             box-shadow: 0px 0px 16px rgba(0, 0, 0, 0.0984488);
             height: 64px;
             align-items: center;
+        }
+    }
 
-            .button {
-                display: none;
-            }
+    &__button {
+        @include tablet {
+            display: none;
         }
     }
 
@@ -29,6 +31,7 @@
         font-weight: 700;
         font-size: 40px;
         line-height: 1.2;
+
         @include tablet {
             font-size: 24px;
             line-height: 1.33;
@@ -41,110 +44,9 @@
         justify-content: center;
         flex: 1 1 auto; 
         margin-bottom: 5px;
+
         @include tablet {
             justify-content: end;
-        }
-
-        .menu__icon {
-            display: none;
-            @include tablet {
-                padding-right: 10px;
-                z-index: 5;
-                display: block;
-                position: relative;
-                width: 30px;
-                height: 18px;
-                cursor: pointer;
-                & span,
-                &::before,
-                &::after {
-                    left: 0;
-                    position: absolute;
-                    height: 10%;
-                    width: 100%;
-                    transition: all 0.3s ease 0s;
-                    background: linear-gradient(224.72deg, #3023AE -1%, #C86DD7 100.5%);
-                }
-                &::before,
-                &::after {
-                    content: "";
-                }
-                &::before {
-                    top: 0;
-                }
-                &::after {
-                    bottom: 0;
-                }
-                & span {
-                    margin-top: -2.5%;
-                    top: 50%;
-                    transform: scale(1), translate(0px, -50%);
-                }
-            }
-        }
-        .menu__body {
-            display: flex;
-            flex: 0 0 464px;
-            @include tablet {
-                position: fixed;
-                display: flex;
-                flex-direction: column;
-                top: 0;
-                right: -100%;
-                width: 100%;
-                height: 100%;
-                background: linear-gradient(224.72deg, #3023AE -1%, #C86DD7 100.5%);
-                padding: 100px 30px 30px 30px;
-                transition: right 0.3s ease 0s;
-                overflow: auto;
-                &._active {
-                    right: 0;
-                }
-                &::before {
-                    content: "";
-                    position: absolute;
-                    width: 100%;
-                    top: 0;
-                    right: 0;
-                    height: 64px;
-                    background: #FFFFFF;
-                    z-index: 2;
-                }
-                &._active::before {
-                    content: "";
-                    position: fixed;
-                    width: 100%;
-                    top: 0;
-                    left: 0;
-                    height: 64px;
-                    background: #FFFFFF;
-                    z-index: 2;
-                }
-            }
-
-            .menu__list {
-                display: flex;
-                flex: 1 1 auto;
-                margin: 0 0 7px 50px;
-                justify-content: space-between;
-                line-height: 1;
-                a {
-                    font-weight: 600;
-                    &:hover {
-                        text-decoration: underline;
-                    }
-                }
-                
-                @include tablet {
-                    flex-direction: column;
-                    text-align: center;
-                    min-width:auto;
-                    margin: 0 auto;
-                    li {
-                        margin-bottom: 30px;
-                    }
-                }
-            }
         }
     }
 }
