--- a/scss/blocks/_image-block.scss
+++ b/scss/blocks/_image-block.scss
@@ -1,6 +1,7 @@
 .image-block {
     display: flex;
     justify-content: space-between;
+
     @include laptop {
         display: flex;
         flex-wrap: wrap;
@@ -24,20 +25,13 @@
             background-color: rgba(0,0,0,0.5);
             opacity: 0;
         }
-        & img {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-        }
         &:hover .image-block__content{
             display: block;
         }
         &:hover:after {
             opacity: 0.5;
         }
+        
         @include laptop {
             margin-bottom: 30px;
         }
@@ -46,6 +40,14 @@
         }
     }
 
+    &__image {
+        position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+    }
     &__content{
         color: #FFFFFF;
         display: none;
