--- a/scss/blocks/_menu.scss
+++ b/scss/blocks/_menu.scss
@@ -21,16 +21,20 @@
                 transition: all 0.3s ease 0s;
                 background: linear-gradient(224.72deg, #3023AE -1%, #C86DD7 100.5%);
             }
+
             &::before,
             &::after {
                 content: "";
             }
+
             &::before {
                 top: 0;
             }
+
             &::after {
                 bottom: 0;
             }
+
             & span {
                 margin-top: -2.5%;
                 top: 50%;
@@ -38,6 +42,7 @@
             }
         }
     }
+
     &__body {
         display: flex;
         flex: 0 0 464px;
@@ -55,25 +60,27 @@
             transition: right 0.3s ease 0s;
             overflow: auto;
 
-            &._active {
+            &_active {
                 right: 0;
             }
+
+            &_active::before {
+                content: "";
+                position: fixed;
+                width: 100%;
+                top: 0;
+                left: 0;
+                height: 64px;
+                background: #FFFFFF;
+                z-index: 2;
+            }
+
             &::before {
                 content: "";
                 position: absolute;
                 width: 100%;
                 top: 0;
                 right: 0;
-                height: 64px;
-                background: #FFFFFF;
-                z-index: 2;
-            }
-            &._active::before {
-                content: "";
-                position: fixed;
-                width: 100%;
-                top: 0;
-                left: 0;
                 height: 64px;
                 background: #FFFFFF;
                 z-index: 2;
@@ -93,20 +100,20 @@
             text-align: center;
             min-width:auto;
             margin: 0 auto;
-            li {
-                margin-bottom: 30px;
-            }
         }
     }
+
     &__item {
         @include tablet {
             margin-bottom: 30px;
         }
     }
+
     &__link {
         font-weight: 600;
-            &:hover {
-                text-decoration: underline;
-            }
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 }
