--- a/css/main.css
+++ b/css/main.css
@@ -123,6 +123,12 @@ body._lock {
   font-weight: 700;
   color: #FFFFFF;
 }
+.button:hover {
+  cursor: pointer;
+  opacity: 0.9;
+  color: #DADADA;
+  transition: all 0.5s ease;
+}
 .button_color_yellow {
   background: #FFC300;
 }
@@ -131,12 +137,6 @@ body._lock {
 }
 .button_color_transparent {
   border: 1px solid rgba(255, 255, 255, 0.295063);
-}
-.button:hover {
-  cursor: pointer;
-  opacity: 0.9;
-  color: #DADADA;
-  transition: all 0.5s ease;
 }
 
 .block-header_color_white {
@@ -216,6 +216,10 @@ body._lock {
 .accordion__button {
   padding-bottom: 26px;
 }
+.accordion__button:after {
+  content: url(../img/notes/arr-down.svg);
+  padding-left: 8px;
+}
 .accordion__button_active, .accordion__button:hover {
   text-decoration: underline;
 }
@@ -224,10 +228,6 @@ body._lock {
 }
 .accordion__button_active::after {
   content: url(../img/notes/arr-up.svg);
-}
-.accordion__button:after {
-  content: url(../img/notes/arr-down.svg);
-  padding-left: 8px;
 }
 .accordion__text {
   display: none;
@@ -499,6 +499,79 @@ body._lock {
   font-weight: 600;
 }
 
+.image-section {
+  position: relative;
+  display: flex;
+  justify-content: end;
+  width: 570px;
+  height: 544px;
+}
+@media (max-width: 1023px) {
+  .image-section {
+    width: 470px;
+    height: 444px;
+    margin-left: 40px;
+  }
+}
+@media (max-width: 374px) {
+  .image-section {
+    margin-left: 17px;
+  }
+}
+.image-section__image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: 1;
+}
+.image-section__content {
+  position: relative;
+  max-width: 474px;
+  margin: auto 48px 46px;
+  color: #FFFFFF;
+  z-index: 2;
+}
+.image-section__title {
+  font-family: "Poppins";
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.333;
+}
+.image-section__text {
+  padding-top: 10px;
+  padding-bottom: 19px;
+  font-weight: 400;
+  mix-blend-mode: normal;
+  opacity: 0.5;
+}
+.image-section__botton-pic {
+  display: flex;
+  align-items: center;
+}
+.image-section__name {
+  margin-left: 20px;
+}
+.image-section::after {
+  content: "";
+  position: absolute;
+  background: linear-gradient(224.72deg, #3023AE -1%, #C86DD7 100.5%);
+  border-radius: 3px;
+  width: 100%;
+  height: 100%;
+  top: 32px;
+  left: -30px;
+}
+@media (max-width: 374px) {
+  .image-section::after {
+    top: 19px;
+    left: -17px;
+  }
+}
+
 .menu__icon {
   display: none;
 }
@@ -553,6 +626,16 @@ body._lock {
     transition: right 0.3s ease 0s;
     overflow: auto;
   }
+  .menu__body::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    top: 0;
+    right: 0;
+    height: 64px;
+    background: #FFFFFF;
+    z-index: 2;
+  }
   .menu__body_active {
     right: 0;
   }
@@ -562,16 +645,6 @@ body._lock {
     width: 100%;
     top: 0;
     left: 0;
-    height: 64px;
-    background: #FFFFFF;
-    z-index: 2;
-  }
-  .menu__body::before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    top: 0;
-    right: 0;
     height: 64px;
     background: #FFFFFF;
     z-index: 2;
