--- a/scss/main.scss
+++ b/scss/main.scss
@@ -14,6 +14,7 @@
 @import "./blocks/links-block";
 @import "./blocks/items-block";
 @import "./blocks/item-review";
+@import "./blocks/image-section";
 @import "./blocks/menu";
 @import "./blocks/header";
 @import "./blocks/explore";
